Checkpoint on debugging and revised testing